projects/ship-ui/ship-stepper/ship-stepper.scss
@use 'helpers' as *;

$shipStepper: true !default;

@if $shipStepper == true {
  sh-stepper {
    --step-track-bg: var(--base-3);
    --step-c: var(--base-6);
    --step-radio-cbg: var(--base-1);
    --step-radio-c: var(--base-g2);
    --step-active-c: var(--base-8);

    display: flex;
    flex-wrap: nowrap;
    width: 100%;
    position: relative;
    overflow: hidden;

    &.primary {
      --step-c: var(--primary-6);
      --step-radio-cbg: var(--primary-1);
      --step-radio-c: var(--primary-g2);
      --step-active-c: var(--primary-8);
    }

    &.accent {
      --step-c: var(--accent-6);
      --step-radio-cbg: var(--accent-1);
      --step-radio-c: var(--accent-g2);
      --step-active-c: var(--accent-8);
    }

    &.warn {
      --step-c: var(--warn-6);
      --step-radio-cbg: var(--warn-1);
      --step-radio-c: var(--warn-g2);
      --step-active-c: var(--warn-8);
    }

    &.error {
      --step-c: var(--error-6);
      --step-radio-cbg: var(--error-1);
      --step-radio-c: var(--error-g2);
      --step-active-c: var(--error-8);
    }

    &.success {
      --step-c: var(--success-6);
      --step-radio-cbg: var(--success-1);
      --step-radio-c: var(--success-g2);
      --step-active-c: var(--success-8);
    }

    button {
      background: transparent;
      border: 0;
      padding: 0;
    }

    button,
    [routerLinkActive],
    [step],
    [value] {
      flex: 2 0;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
      gap: p2r(8);
      position: relative;
      color: var(--base-8);
      cursor: pointer;
      user-select: none;
      outline: none;

      &:focus-visible .sh-radio {
        outline: 2px solid var(--primary-8);
        outline-offset: 2px;
        border-radius: 50%;
      }

      &:first-child {
        align-items: flex-start;
        flex: 1 0;
      }

      &:last-child {
        align-items: flex-end;
        flex: 1 0;
        text-align: end;
      }

      &:not(.active) .sh-radio {
        z-index: 10;
      }

      &:has(~ button.active),
      &:has(~ [step].active),
      &:has(~ [routerLinkActive].active),
      &:has(~ [value].active) {
        .sh-radio {
          --radiod-o: 1;

          .radio {
            border-width: 0;
            background: var(--step-radio-c);
          }
        }
      }

      .sh-radio {
        .radio {
          --radiod-c: var(--step-radio-cbg);

          width: p2r(16);
          height: p2r(16);
        }
      }

      &.active {
        color: var(--step-active-c);
        outline: none;

        .sh-radio {
          z-index: 0;
          --radiod-o: 1;

          .radio {
            border-width: 0;
            background: var(--step-radio-c);
          }

          &:before {
            content: '';
            position: absolute;
            top: p2r(6);
            left: -9999px;
            z-index: -1;
            right: 0;
            height: p2r(4);
            background-color: var(--step-active-c);
          }
        }
      }
    }

    &:before {
      content: '';
      position: absolute;
      top: p2r(6);
      left: 0;
      z-index: 0;
      right: 0;
      height: p2r(4);
      background-color: var(--step-track-bg);
    }
  }
}

